# engram

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  engram.html  engram_architecture_v1.txt
.github/workflows/: ci-node.yml  ci-python.yml
engram-node/: jest.config.js  package-lock.json  package.json  tsconfig.json
engram-node/src/: config.ts  engram.ts  index.ts  results.ts
engram-node/src/extraction/: base.ts
engram-node/src/ingestion/: pipeline.ts
engram-node/src/models/: index.ts
engram-node/src/retrieval/: pipeline.ts
engram-node/src/storage/: sqliteStore.ts
engram-node/tests/: engram.test.ts
engram-py/: pyproject.toml
engram-py/engram/: __init__.py  config.py  engram.py  results.py
engram-py/engram/embedding/: __init__.py  base.py
engram-py/engram/extraction/: __init__.py  base.py
engram-py/engram/ingestion/: __init__.py  pipeline.py
engram-py/engram/models/: __init__.py  alias.py  entity.py  episode.py  fact.py  quarantined_fact.py  retrieval_trace.py
engram-py/engram/retrieval/: __init__.py  pipeline.py
engram-py/engram/storage/: __init__.py  sqlite_store.py
engram-py/engram/workers/: __init__.py  background.py
engram-py/tests/: test_embedding_and_graph.py  test_engram.py  test_engram_extended.py  test_integration_realworld.py  test_memory_blocks_and_nhop.py  test_store_unit.py
src/: index.ts
src/ingestion/: pipeline.ts
src/storage/: sqliteStore.ts
src/workers/: background.ts
tests/: engramExtended.test.ts  graphTraversal.test.ts  integrationRealworld.test.ts  storeUnit.test.ts
(+1 files in other folders)
